# kwcom-flask

./: .travis.yml  README.md  kwcom.wsgi  requirements.txt  setup.cfg
lib/: kwcom.wsgi  wsgi.conf
lib/kwcom/: __init__.py  contact.py  mainpages.py  utils.py
lib/kwcom/static/: style.css
lib/kwcom/templates/: base.html
lib/kwcom/templates/mainpages/: about-me.html  community.html  contact.html  education.html  experience.html  projects.html  skills.html
lib/kwcom/templates/template/: base.html
tests/: .env  conftest.py  test_contact.py  test_factory.py  test_mainpages.py  test_utils.py
