[metadata]
name = kwcom
version = 0.0.1
description = Personal website for Kevin Watt

[options]
packages = find:
package_dir = 
    =lib
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    kwcom
